--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "show10"
+          project: "sml"
           import-map: import_map.json
           entrypoint: "./src/app.ts" # TODO: update entrypoint
